--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,7 @@
 
             <!-- Question 5.1 -->
             <div class="form-group">
-              <label for="q5_1">5.1 Ce simți când îți amintești de această memorie?</label>
+              <label for="q5_1">5.1 Vezi pe cineva necunoscut care trăiește acea memorie acum. Ce simți față de acea persoană?</label>
               <select id="q5_1" name="q5_1" required data-options="EMOTIONS"></select>
             </div>
 
@@ -215,15 +215,10 @@
 
             <!-- Question 5.3 -->
             <div class="form-group">
-              <label for="q5_3">5.3 Ce simți înainte să îți amintești de această memorie?</label>
+              <label for="q5_3">5.3 Ce simți după ce retrăiești această memorie?</label>
               <select id="q5_3" name="q5_3" required data-options="EMOTIONS"></select>
             </div>
 
-            <!-- Question 5.4 -->
-            <div class="form-group">
-              <label for="q5_4">5.4 Ce simți după ce retrăiești această memorie?</label>
-              <select id="q5_4" name="q5_4" required data-options="EMOTIONS"></select>
-            </div>
 
       </fieldset>
 <!-- #endregion Section 5 -->
