update with stable blenderexport script running

--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,8 @@
         <button type="button" id="nextBtn">Next</button>
         <button type="submit" id="submitBtn" style="display: none;">Submit</button>
         <button type="button" id="exportBtn" style="display:none;">Export CSV</button>
-           
+        <button type="button" id="devAutofillBtn">Dev: Autofill</button>
+     
             <div id="submit-error-message" style="display: none; color: rgb(106, 84, 171); font-size: 14px; margin-top: 10px;">
             Te rog completează toate casetele de text inainte de a da submit - da click previous pentru a verifica 
           </div>
